@@ -14,7 +14,7 @@ isabelle_fonts-20211004
 isabelle_setup-20240327
 javamail-20240109
 jdk-21.0.3
-jedit-20240425
+jedit-20241101
 jfreechart-1.5.3
 jortho-1.0-2
 jsoup-1.17.2
